# gemini-cli

./: .gitignore
web-service/: Cargo.toml  README.md  build.sh  gemini_web.db
web-service/bridge/: bridge.js  package-lock.json  package.json
web-service/migrations/: 20250103000001_initial.sql
web-service/src/: auth.rs  chat.rs  database.rs  main.rs  node_bridge.rs  workspace.rs
web-service/static/: index.html
